# ai-agents-learn

./: .gitignore  CLAUDE.md  PLAN.md  README.md
health-agent/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
health-agent/backend/alembic/: env.py
health-agent/backend/alembic/versions/: 20260506_0001_phase1_user_system.py  20260508_0002_phase2_pgvector_extension.py  20260508_0003_phase3_knowledge_tables.py  20260509_0004_phase4_diet_tables.py  20260509_0005_phase5_body_tables.py  20260512_0006_phase6_memory_tables.py  20260512_0007_phase7_chat_messages.py  20260513_0008_phase8_plan_tables.py  20260513_0009_phase9_suggestions.py
health-agent/backend/app/: config.py  dependencies.py  main.py
health-agent/backend/app/agents/: __init__.py  _logging.py  base.py
health-agent/backend/app/core/: exceptions.py  logging.py  pagination.py  responses.py  security.py
health-agent/backend/app/db/: base.py  session.py
health-agent/backend/app/schemas/: auth.py  body.py  chat.py  common.py  diet.py  knowledge.py  memory.py  plan.py  suggestion.py  user.py
health-agent/backend/app/services/: body_service.py  chat_service.py  diet_service.py  memory_service.py  plan_service.py  rag_service.py  suggestion_service.py  user_service.py
health-agent/backend/data/: foods.json  health_tips.json
health-agent/backend/scripts/: seed_knowledge.py
health-agent/backend/tests/: conftest.py
health-agent/backend/tests/agents/: test_base.py  test_chat_agent.py  test_diet_agent.py  test_memory_agent.py  test_plan_agent.py  test_suggestion_agent.py
health-agent/backend/tests/api/: test_body.py  (+6 more)
(+472 files in other folders)
